#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-00
2012-05-02 Andy Salnikov
- bitfieds now have accessor attribute which generates methods
  for accessing bitfield values
- above is needed to generate (calls to) constructors which take
  bitfield values, auto-generated constructors now accept
  bitfield values instead of whole attribute value
- more progress on HDF5 generator, Xml parser now has code
  to parse HDF5 schema

Tag: V00-01-03
2012-01-12 Andy Salnikov
- use templates ($name substitution) instead of formatting (%s) for 
  code generation in many places.
- at some point it may be beneficial to switch to more advanced
  templating system than to keep all stuff in Python code.

Tag: V00-01-02
2012-01-12 Andy Salnikov
- extending method generation capabilities
- methods may have "rank" attribute which cases return type to be 
  ndarray<Type, Rank>
- methods may have "code" element instead of "expr" which can specify
  full methods body

Tag: V00-01-00
2011-12-09 Andy Salnikov
- switch to ndarray for accessing array data
- work-in-progress hdf5 generator added

Tag: V00-00-09
2011-06-27 Andy Salnikov
- fix missing method arguments in psanadoc

Tag: V00-00-08
2011-06-16 Andy Salnikov
- generate CSS file in DdlPsanaDoc

Tag: V00-00-07
2011-05-10 Andy Salnikov
- XmlReader: file name was incorrect if there were included files

Tag: V00-00-06
2011-04-07 Andy Salnikov
- added psana-doc backend which generates documentation for psana
  interfaces (generated by psana backend)
- many other changes everywhere related to documentation generation

Tag: V00-00-05
2011-03-31 Andy Salnikov
- renamed "dimensions" attribute into "shape"